# rust-movies-graphql

./: .rustfmt.toml  Cargo.toml  README  README.md
graphql-api/: Cargo.toml
graphql-api/src/: main.rs
models/: Cargo.toml
models/src/: lib.rs  models.rs
