[package]
name = "graphql-api"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "7.0.1"
async-graphql-warp = "7.0.1"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7.10"
warp = "0.3.6"
models = { path = "../models" }
http = "1.0.0"
config = "0.13.4"
